fix: translate Eden settings section to use lang.get() system
- Add translation keys for Eden section (cookies path, item cache path)
- Add buttons translations (open folder, storage info labels)
- Remove hardcoded French text defaults from lang.get() calls
- Add settings.herald section with localized group titles
- Update retranslate_ui() to use keys without defaults
- Fully support FR/EN/DE language switching in Eden settings

--- a/Language/de.json
+++ b/Language/de.json
@@ -174,7 +174,16 @@
         "clean_eden_button": "Eden bereinigen",
         "clean_eden_tooltip": "Alle Cookies und temporären Chrome-Profildateien löschen",
         "clean_cache_button": "Cache leeren",
-        "clean_cache_tooltip": "Items-Cache von Websuchen löschen"
+        "clean_cache_tooltip": "Items-Cache von Websuchen löschen",
+        "open_folder_button": "Ordner öffnen",
+        "eden_storage_info": "Automatische Speicherung in",
+        "item_cache_storage_info": "Automatische Speicherung in"
+    },
+    "settings": {
+        "herald": {
+            "config_cookies_group_title": "Cookies-Pfad",
+            "config_item_cache_group_title": "Element-Cache-Pfad"
+        }
     },
     "herald_buttons": {
         "validation_in_progress": "⏳ Eden-Validierung läuft... Bitte warten"
