fix: translate Eden cleanup confirmation dialogs - Add translation keys for cleanup confirmations (EN/FR/DE) - Remove hardcoded French defaults - Use lang.get() system for all confirmation messages

--- a/Language/fr.json
+++ b/Language/fr.json
@@ -182,7 +182,11 @@
     "settings": {
         "herald": {
             "config_cookies_group_title": "Chemin des cookies",
-            "config_item_cache_group_title": "Chemin du cache des items"
+            "config_item_cache_group_title": "Chemin du cache des items",
+            "clean_eden_confirm_title": "Confirmer le nettoyage",
+            "clean_eden_confirm_message": "⚠️ Cette action va supprimer :\n\n• Tous les cookies Eden\n• Le profil Chrome complet (cache, historique, session)\n\n📁 Dossier : {path}\n\nVous devrez régénérer vos cookies après cette opération.\n\nContinuer ?",
+            "clean_cache_confirm_title": "Confirmer le nettoyage",
+            "clean_cache_confirm_message": "⚠️ Cette action va supprimer :\n\n• Le cache des items trouvés via recherche web\n\n📁 Dossier : {path}\n\nLes items de la base de données ne seront pas affectés.\n\nContinuer ?"
         }
     },
     "herald_buttons": {
