--- a/Language/de.json
+++ b/Language/de.json
@@ -182,7 +182,11 @@
     "settings": {
         "herald": {
             "config_cookies_group_title": "Cookies-Pfad",
-            "config_item_cache_group_title": "Element-Cache-Pfad"
+            "config_item_cache_group_title": "Element-Cache-Pfad",
+            "clean_eden_confirm_title": "Bereinigung bestätigen",
+            "clean_eden_confirm_message": "⚠️ Diese Aktion löscht:\n\n• Alle Eden-Cookies\n• Komplettes Chrome-Profil (Cache, Verlauf, Sitzung)\n\n📁 Ordner: {path}\n\nNach diesem Vorgang müssen Sie Ihre Cookies neu generieren.\n\nFortfahren?",
+            "clean_cache_confirm_title": "Bereinigung bestätigen",
+            "clean_cache_confirm_message": "⚠️ Diese Aktion löscht:\n\n• Element-Cache von Web-Suchen\n\n📁 Ordner: {path}\n\nDatenbankitems werden nicht beeinträchtigt.\n\nFortfahren?"
         }
     },
     "herald_buttons": {
