--- a/Language/en.json
+++ b/Language/en.json
@@ -182,7 +182,11 @@
     "settings": {
         "herald": {
             "config_cookies_group_title": "Cookies path",
-            "config_item_cache_group_title": "Items cache path"
+            "config_item_cache_group_title": "Items cache path",
+            "clean_eden_confirm_title": "Confirm cleanup",
+            "clean_eden_confirm_message": "⚠️ This action will delete:\n\n• All Eden cookies\n• Complete Chrome profile (cache, history, session)\n\n📁 Folder: {path}\n\nYou will need to regenerate your cookies after this operation.\n\nContinue?",
+            "clean_cache_confirm_title": "Confirm cleanup",
+            "clean_cache_confirm_message": "⚠️ This action will delete:\n\n• Items cache found via web search\n\n📁 Folder: {path}\n\nDatabase items will not be affected.\n\nContinue?"
         }
     },
     "herald_buttons": {
