--- a/Language/de.json
+++ b/Language/de.json
@@ -306,23 +306,21 @@
             "move_folder_merge_question": "Möchten Sie die Dateien zusammenführen?",
             "move_folder_delete_title": "Alten Ordner löschen?",
             "move_folder_delete_question": "Der Ordner wurde erfolgreich kopiert. Möchten Sie den alten Ordner löschen?",
-            "theme_change_restart": "Das Theme wurde geändert. Bitte starten Sie die Anwendung neu, damit die Änderungen wirksam werden.",
-            "clean_eden_confirm_title": "Bereinigung bestätigen",
-            "clean_eden_confirm_message": "⚠️ Diese Aktion löscht:\n\n• Alle Eden-Cookies\n• Vollständiges Chrome-Profil (Cache, Verlauf, Sitzung)\n\n📁 Ordner: {path}\n\nSie müssen Ihre Cookies nach diesem Vorgang neu generieren.\n\nFortfahren?",
+            "theme_change_restart": "Das Theme wurde geändert. Bitte starten Sie die Anwendung neu, damit die Änderungen wirksam werden."
+        },
+        "success_messages": {
             "clean_eden_success_title": "Bereinigung erfolgreich",
             "clean_eden_success_message": "✅ Der Eden-Ordner wurde erfolgreich bereinigt.\n\nAlle Cookies und temporären Dateien wurden gelöscht.",
             "clean_eden_empty_title": "Leerer Ordner",
             "clean_eden_empty_message": "ℹ️ Der Eden-Ordner ist bereits leer oder existiert nicht.",
             "clean_eden_error_title": "Fehler",
             "clean_eden_error_message": "❌ Bereinigungs fehler:\n\n{error}",
-            "clean_cache_confirm_title": "Bereinigung bestätigen",
-            "clean_cache_confirm_message": "⚠️ Diese Aktion löscht:\n\n• Items-Cache von Websuchen\n\n📁 Ordner: {path}\n\nDatenbank-Items sind nicht betroffen.\n\nFortfahren?",
             "clean_cache_success_title": "Bereinigung erfolgreich",
             "clean_cache_success_message": "✅ Items-Cache wurde geleert.\n\nCache gelöscht.",
             "clean_cache_empty_title": "Leerer Ordner",
             "clean_cache_empty_message": "ℹ️ Der Cache ist bereits leer oder existiert nicht.",
             "clean_cache_error_title": "Fehler",
-            "clean_cache_error_message": "❌ Bereinigungs fehler:\n\n{error}",
+            "clean_cache_error_message": "❌ Bereinigungs fehler:\n\n{error}"
             "config_cookies_group_title": "Cookie-Pfad",
             "config_item_cache_group_title": "Items-Cache-Pfad"
         }
