fix: v0.109 - Language selection dialog fixes
- Fix: Skip work-in-progress language files (starting with underscore) in get_available_languages()
  This prevents incomplete Spanish (_es.json) from appearing in language list

- Fix: Add missing commas in JSON files (fr.json and de.json)
  Line 314: Missing comma after clean_cache_error_message
  This was causing JSON parsing errors when loading language files

- Result: Settings > General now shows only complete languages (French, English, German)
  Spanish translation will be added when complete

--- a/Language/de.json
+++ b/Language/de.json
@@ -310,7 +310,7 @@
             "clean_cache_empty_title": "Leerer Ordner",
             "clean_cache_empty_message": "ℹ️ Der Cache ist bereits leer oder existiert nicht.",
             "clean_cache_error_title": "Fehler",
-            "clean_cache_error_message": "❌ Bereinigungs fehler:\n\n{error}"
+            "clean_cache_error_message": "❌ Bereinigungs fehler:\n\n{error}",
             "config_cookies_group_title": "Cookie-Pfad",
             "config_item_cache_group_title": "Items-Cache-Pfad"
         }
