fix: v0.109 - Translate credits dialog to support multiple languages
- Add all credits text to language files under dialogs.about_dialog section
  Credits are now translatable in fr.json, en.json, de.json

- Update about_dialog.py to use lang.get() with dialogs.about_dialog prefix
  All hardcoded English text replaced with language keys

- Update retranslate_ui() to reload credits when language changes
  Credits tab fully refreshes with new language in Settings

- Result: Credits now display in correct language (French, English, German)
  All dialogs support the same language changing mechanism

--- a/Language/de.json
+++ b/Language/de.json
@@ -16,7 +16,32 @@
             "creator_title": "Entwickler",
             "repository_title": "Repository",
             "license_title": "Lizenz",
-            "license_text": "MIT-Lizenz - Copyright © 2025 Christophe Pelichet (Ewoline)"
+            "license_text": "MIT-Lizenz - Copyright © 2025 Christophe Pelichet (Ewoline)",
+            "credits_title": "Danksagungen & Würdigung",
+            "credits_intro": "Dieses Projekt wäre nicht möglich gewesen ohne die Beiträge verschiedener Open-Source-Projekte, Datenquellen und der DAOC-Gemeinschaft.",
+            "daoc_community_title": "DAOC-Gemeinschaft",
+            "dol_project_title": "Dawn of Light (DOL)",
+            "dol_project_label": "Projekt:",
+            "dol_description_label": "Beschreibung:",
+            "dol_description": "Open-Source-DAOC-Serveremulator",
+            "eden_server_title": "Eden DAOC",
+            "eden_server_label": "Server:",
+            "eden_description_label": "Beschreibung:",
+            "eden_description": "DAOC-Privatserver",
+            "dolmodels_source_title": "Eve-of-Darkness DolModels",
+            "dolmodels_source_label": "Quelle:",
+            "dolmodels_description_label": "Beschreibung:",
+            "dolmodels_description": "1000+ DAOC-Objektmodellbilder",
+            "special_thanks_title": "Besonderer Dank",
+            "special_thanks_text": "Tester und Freunde, die dieses Projekt ermöglicht haben:",
+            "translations_title": "🌍 Übersetzungen",
+            "translations_label": "Sprachbeitragende:",
+            "translation_french": "Französisch",
+            "translation_english": "Englisch",
+            "translation_german": "Deutsch",
+            "translation_spanish": "Spanisch",
+            "translation_spanish_coming": "Demnächst",
+            "translation_credits": "Ewoline / IA"
         },
         "new_character": {
             "existing_character_label": "Bestehender Charakter:",
