fix: v0.109 - Translate About tab to support multiple languages
- Add all About tab text to language files under dialogs.about_dialog section
  Creator name, repository label, and copyright text are now translatable

- Update _get_themed_about_html() to use lang.get() for all content
  All hardcoded English text replaced with language keys

- Update retranslate_ui() to reload both About and Credits tabs when language changes
  Both tabs fully refresh with new language in Settings

- Result: About tab now displays in correct language (French, English, German)
  Consistent behavior with Credits tab

--- a/Language/de.json
+++ b/Language/de.json
@@ -14,9 +14,12 @@
             "description_title": "Beschreibung",
             "description_text": "Charakterverwaltungsanwendung für Dark Age of Camelot (DAOC), entwickelt in Python mit PySide6.",
             "creator_title": "Entwickler",
+            "creator_name": "Ewoline",
             "repository_title": "Repository",
+            "repository_label": "GitHub - DAOC Character Management",
             "license_title": "Lizenz",
             "license_text": "MIT-Lizenz - Copyright © 2025 Christophe Pelichet (Ewoline)",
+            "copyright_text": "MIT-Lizenz - Copyright © 2025 Christophe Pelichet (Ewoline)",
             "credits_title": "Danksagungen & Würdigung",
             "credits_intro": "Dieses Projekt wäre nicht möglich gewesen ohne die Beiträge verschiedener Open-Source-Projekte, Datenquellen und der DAOC-Gemeinschaft.",
             "daoc_community_title": "DAOC-Gemeinschaft",
