--- a/Language/en.json
+++ b/Language/en.json
@@ -14,9 +14,12 @@
             "description_title": "Description",
             "description_text": "Character management application for Dark Age of Camelot (DAOC), developed in Python with PySide6.",
             "creator_title": "Creator",
+            "creator_name": "Ewoline",
             "repository_title": "Repository",
+            "repository_label": "GitHub - DAOC Character Management",
             "license_title": "License",
             "license_text": "MIT License - Copyright © 2025 Christophe Pelichet (Ewoline)",
+            "copyright_text": "MIT License - Copyright © 2025 Christophe Pelichet (Ewoline)",
             "credits_title": "Credits & Acknowledgments",
             "credits_intro": "This project would not be possible without the contributions of various open-source projects, data sources, and the DAOC community.",
             "daoc_community_title": "DAOC Community",
