--- a/Language/fr.json
+++ b/Language/fr.json
@@ -88,9 +88,12 @@
             "description_title": "Description",
             "description_text": "Application de gestion de personnages pour Dark Age of Camelot (DAOC), développée en Python avec PySide6.",
             "creator_title": "Créateur",
+            "creator_name": "Ewoline",
             "repository_title": "Dépôt",
+            "repository_label": "GitHub - DAOC Character Management",
             "license_title": "Licence",
             "license_text": "Licence MIT - Copyright © 2025 Christophe Pelichet (Ewoline)",
+            "copyright_text": "Licence MIT - Copyright © 2025 Christophe Pelichet (Ewoline)",
             "credits_title": "Crédits & Remerciements",
             "credits_intro": "Ce projet n'aurait pas été possible sans les contributions de divers projets open-source, sources de données et la communauté DAOC.",
             "daoc_community_title": "Communauté DAOC",
