feat: implement all-templates view with realm tabs and import functionality
- Create UIArmoryAllTemplates window displaying all templates across realms (Albion, Hibernia, Midgard)
- Implement realm-based tab interface with template table and HTML-formatted preview
- Support automatic template format detection (Zenkcraft, Loki, etc.) via template_parse()
- Add Import Template button with TemplateImportDialog in manual selection mode
- Remove Download and Search Missing Prices buttons from ArmorManagementDialog
- Update context menus to show only Download/Delete actions
- Add translation keys for new UI strings
- Implement proper HTML color formatting for template preview display

--- a/Language/de.json
+++ b/Language/de.json
@@ -136,6 +136,11 @@
             "new_character": "➕ Neuer Charakter",
             "search_herald": "🔍 Im Herald suchen"
         },
+        "tools": {
+            "label": "Werkzeuge",
+            "armory": "Rüstkammer",
+            "backup": "Sicherung"
+        },
         "view": {
             "label": "Ansicht",
             "columns": "Spalten"
@@ -164,10 +169,6 @@
             "label": "Aktion",
             "resistances": "Widerstände",
             "armor_management": "📁 Waffenkammer"
-        },
-        "tools": {
-            "label": "Werkzeuge",
-            "backup": "Sicherung"
         }
     },
     "misc": {
@@ -727,6 +728,11 @@
         "season_label": "Saison:",
         "description_label": "Beschreibung:",
         "description_placeholder": "Z.B.: günstig ohne ml10",
+        "invalid_source_file": "Ungültige Quelldatei",
+        "select_class": "Bitte wählen Sie eine Klasse",
+        "select_realm": "Bitte wählen Sie ein Reich",
+        "select_season": "Bitte wählen Sie eine Saison",
+        "enter_description": "Bitte geben Sie eine Beschreibung ein",
         "tags_label": "Tags (optional):",
         "preview_label": "Dateiname:",
         "import_button": "📥 Importieren",
@@ -1323,6 +1329,58 @@
         "select_realm": "Bitte wählen Sie ein Königreich",
         "select_class": "Bitte wählen Sie eine Klasse",
         "select_race": "Bitte wählen Sie eine Rasse"
+    },
+    "armory": {
+        "all_templates_window_title": "Rüstkammer - Alle Vorlagen",
+        "search_label": "Suche:",
+        "search_placeholder": "Nach Vorlagenname suchen...",
+        "realm_filter_label": "Königreich:",
+        "all_realms": "Alle Königreiche",
+        "class_filter_label": "Klasse:",
+        "all_classes": "Alle Klassen",
+        "column_realm": "Königreich",
+        "column_class": "Klasse",
+        "column_name": "Vorlagenname",
+        "column_season": "Saison",
+        "column_actions": "Aktionen",
+        "row_actions": "...",
+        "status_showing": "Zeige {shown} von {total} Vorlagen",
+        "add_template_button": "➕ Vorlage Hinzufügen",
+        "add_template_dialog_title": "Wählen Sie eine Vorlagendatei zum Hinzufügen",
+        "add_template_success_title": "Vorlage Hinzugefügt",
+        "add_template_success_message": "Die Vorlage wurde erfolgreich zur Rüstkammer hinzugefügt!",
+        "add_template_error": "Fehler beim Hinzufügen der Vorlage",
+        "file_not_found": "Die ausgewählte Datei wurde nicht gefunden",
+        "invalid_filename_format": "Der Dateiname muss im Format sein: Klasse_Saison_Beschreibung.txt",
+        "select_realm_title": "Königreich Auswählen",
+        "select_realm_message": "Zu welchem Königreich möchten Sie diese Vorlage hinzufügen?",
+        "file_exists_title": "Datei Existiert",
+        "file_exists_message": "Diese Vorlage existiert bereits. Überschreiben?",
+        "preview_button": "👁️ Vorschau",
+        "import_button": "📥 Vorlage Importieren",
+        "delete_button": "🗑️ Löschen",
+        "preview_title": "Vorlagenvorschau",
+        "preview_panel_title": "Vorlagenvorschau",
+        "preview_no_content": "Kein Inhalt zur Vorschau verfügbar",
+        "preview_error": "Fehler beim Laden der Vorschau",
+        "select_template_preview": "Wählen Sie eine Vorlage zur Vorschau...",
+        "import_success_title": "Erfolgreich importiert",
+        "import_success_message": "Vorlage erfolgreich importiert!",
+        "import_error": "Fehler beim Importieren der Vorlage",
+        "delete_confirm_title": "Vorlage löschen",
+        "delete_confirm_message": "Sind Sie sicher, dass Sie '{name}' löschen möchten?\nDiese Aktion kann nicht rückgängig gemacht werden.",
+        "delete_success_title": "Gelöscht",
+        "delete_success_message": "Vorlage erfolgreich gelöscht",
+        "delete_error_title": "Fehler",
+        "delete_error": "Fehler beim Löschen der Vorlage",
+        "download_dialog_title": "Vorlage Speichern",
+        "download_success_title": "Erfolg",
+        "download_success_message": "Vorlage erfolgreich heruntergeladen!",
+        "download_error_title": "Fehler",
+        "context_delete": "Vorlage löschen",
+        "context_download": "Vorlage Herunterladen",
+        "error_title": "Fehler",
+        "window_error": "Fehler beim Öffnen des Vorlagenfensters"
     },
     "version_check": {
         "current": "Aktuelle Version:",
