feat: add context menu emojis and translations, implement template download feature
- Add crossed swords emoji  to Armory menu item in Tools
- Add emoji and translations to context menu actions:
  -  Edit with template_context_menu.edit translation
  -  Delete with template_context_menu.delete translation
  -  Download with template_context_menu.download translation
- Implement _download_template method in UIArmoryAllTemplates
  - Allows users to export templates to custom location
  - Shows file save dialog
  - Includes success/error messages
- Add template_context_menu translations to all language files (en, fr, de, es)
- Update dialogs.py to use new template_context_menu.download key with emoji

All menu items now properly localized and include visual indicators via emojis.

--- a/Language/de.json
+++ b/Language/de.json
@@ -138,7 +138,7 @@
         },
         "tools": {
             "label": "Werkzeuge",
-            "armory": "Rüstkammer",
+            "armory": "⚔️ Rüstkammer",
             "backup": "Sicherung"
         },
         "view": {
@@ -775,6 +775,14 @@
         "load_error": "Fehler beim Laden",
         "info_items": "{count} Items",
         "info_imported": "Importiert am {date}"
+    },
+    "template_context_menu": {
+        "edit": "Bearbeiten",
+        "delete": "Löschen",
+        "download": "Herunterladen",
+        "confirm_delete": "Löschen bestätigen",
+        "delete_confirm_message": "Möchten Sie diese Vorlage wirklich löschen?",
+        "delete_error": "Fehler beim Löschen der Vorlage"
     },
     "template_preview": {
         "window_title": "Vorlagenvorschau - {name}",
