--- a/Language/_es.json
+++ b/Language/_es.json
@@ -143,6 +143,7 @@
         },
         "tools": {
             "label": "Herramientas",
+            "armory": "⚔️ Armory",
             "backup": "Copia de seguridad"
         }
     },
@@ -535,6 +536,14 @@
         "load_error": "Error loading template",
         "info_items": "{count} items",
         "info_imported": "Imported on {date}"
+    },
+    "template_context_menu": {
+        "edit": "Edit",
+        "delete": "Delete",
+        "download": "Download",
+        "confirm_delete": "Confirm deletion",
+        "delete_confirm_message": "Are you sure you want to delete this template?",
+        "delete_error": "Error deleting template"
     },
     "template_preview": {
         "window_title": "Template Preview - {name}",
