--- a/Language/en.json
+++ b/Language/en.json
@@ -138,7 +138,7 @@
         },
         "tools": {
             "label": "Tools",
-            "armory": "Armory",
+            "armory": "⚔️ Armory",
             "backup": "Backup"
         },
         "view": {
@@ -775,6 +775,14 @@
         "load_error": "Error loading template",
         "info_items": "{count} items",
         "info_imported": "Imported on {date}"
+    },
+    "template_context_menu": {
+        "edit": "Edit",
+        "delete": "Delete",
+        "download": "Download",
+        "confirm_delete": "Confirm Deletion",
+        "delete_confirm_message": "Are you sure you want to delete this template?",
+        "delete_error": "Error deleting template"
     },
     "template_preview": {
         "window_title": "Template Preview - {name}",
