feat: add Class column to template table with sorting support
- Added second column to template table in UIArmoryTemplateViewAll
- Class data loaded from metadata JSON files using TemplateMetadata
- Implemented _get_template_class() helper method for metadata parsing
- Added language support for 'Class' column header in all language files
- Class column displays 'Unknown' if metadata not available

--- a/Language/_es.json
+++ b/Language/_es.json
@@ -772,6 +772,10 @@
         "view_model_error": "Model viewer not available"
     },
     "armoury_dialog": {
+        "table_headers": {
+            "filename": "Filename",
+            "class": "Class"
+        }
     },
     "armoury_upload": {
     },
