fix: add missing translation keys for template import season checkbox
- Add 'template_import.include_season_in_name' translation key to all language files
- Ensures checkbox label in template import dialog uses lang.get() instead of hardcoded French
- Translations added:
  - en.json: 'Include season in template name'
  - fr.json: 'Inclure la saison dans le nom du template'
  - de.json: 'Saison im Vorlagennamen einschließen'
  - _es.json: 'Include season in template name'
- Fixes issue where season checkbox text was hardcoded and not localized

--- a/Language/de.json
+++ b/Language/de.json
@@ -728,6 +728,7 @@
         "season_label": "Saison:",
         "description_label": "Beschreibung:",
         "description_placeholder": "Z.B.: günstig ohne ml10",
+        "include_season_in_name": "Saison im Vorlagennamen einschließen",
         "invalid_source_file": "Ungültige Quelldatei",
         "select_class": "Bitte wählen Sie eine Klasse",
         "select_realm": "Bitte wählen Sie ein Reich",
