fix: fix template edit dialog localization, translation keys, and class selection bug
- Translate module and class docstrings to English in ui_armory_template_edit_dialog.py
- Replace hardcoded French strings with lang.get() calls in _update_preview() method
- Add missing template_edit translation section to all 4 language files (en, fr, de, _es)
- Fix class selection bug: move class combo population from _connect_signals() to _load_current_values()
- Resolves issue where editing template showed incorrect default class value
- Files modified: UI/ui_armory_template_edit_dialog.py, Language/en.json, Language/fr.json, Language/de.json, Language/_es.json

--- a/Language/_es.json
+++ b/Language/_es.json
@@ -546,6 +546,26 @@
         "delete_confirm_message": "Are you sure you want to delete this template?",
         "delete_error": "Error deleting template"
     },
+    "template_edit": {
+        "window_title": "Edit template - {name}",
+        "info_group_title": "Template information",
+        "realm_label": "Realm:",
+        "class_label": "Class:",
+        "season_label": "Season:",
+        "description_label": "Description:",
+        "preview_label": "Preview new name",
+        "cancel_button": "Cancel",
+        "save_button": "Save",
+        "error_title": "Error",
+        "success_title": "Success",
+        "invalid_fields": "Please fill in all fields correctly",
+        "duplicate_error": "A template with this name already exists",
+        "fill_all_fields": "Please fill in all fields",
+        "select_valid_season": "Please select a valid season",
+        "success_message": "Template modified successfully",
+        "save_error": "Unable to save metadata",
+        "error_message": "Error during modification:\n{error}"
+    },
     "template_preview": {
         "window_title": "Template Preview - {name}",
         "metadata_group": "📋 Information",
