--- a/Language/fr.json
+++ b/Language/fr.json
@@ -412,6 +412,13 @@
                 "title": "Debug",
                 "subtitle": "Options de débogage pour le diagnostic"
             },
+            "eden_debug_window": {
+                "title": "🌐 Debug Eden - Connexions & Cookies",
+                "clear_button": "🗑️ Effacer",
+                "export_button": "💾 Exporter",
+                "logs_title": "📋 Logs Eden en temps réel",
+                "ready_text": "Prêt à capturer les logs Eden..."
+            },
             "armory": {
                 "title": "Armurerie",
                 "subtitle": "Import et gestion de la base de données d'items",
